--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,6 +26,7 @@ jobs:
       # run tests!
       - run: yarn test
       - run: yarn audit
+      - run: npx yarn-audit-fix
       - run: yarn build
 
 workflows:
